# foundry-toolbox-search

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
infra/: README.md  pyproject.toml
infra/infra/: __init__.py  provision.py
mcp_servers/: README.md
mcp_servers/accounts/: Dockerfile  README.md  pyproject.toml
mcp_servers/accounts/accounts_mcp/: __init__.py  app.py
mcp_servers/investments/: Dockerfile  README.md  pyproject.toml
mcp_servers/investments/investments_mcp/: __init__.py  app.py
mcp_servers/loans/: Dockerfile  README.md  pyproject.toml
mcp_servers/loans/loans_mcp/: __init__.py  app.py
measurement/: README.md  pyproject.toml  results-autopin.json
measurement/context/: cold-toolbox-tools.json  direct-agent-tools.json  standalone-mcp-tools.json  tool-search-results.json  warm-toolbox-tools.json
measurement/measurement/: __init__.py  export_context.py  mcp_client.py  measure.py  test_mcp.py
